Aula 2 de JavaScript - Operações Aritméticas

--- a/aula1.html
+++ b/aula1.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <script>
+            //alert("Aula de Javascript")
        alert("Aula de Javascript");
 
        document.write("<strong>Aula de javascript</strong>");
