--- a/atividades/atividade-7.html
+++ b/atividades/atividade-7.html
@@ -12,10 +12,10 @@
         
         let num = parseInt(prompt('Escolha um número:'))
         let contador = 0
-        let inicial = 1
+        let começo = 1
  
-        while (inicial <= num) {
-            if (inicial % 2 === 0) {
+        while (começo <= num) {
+            if (começo % 2 === 0) {
                 contador++
             }
             inicial ++
