--- a/aula6.html
+++ b/aula6.html
@@ -23,7 +23,7 @@
     })
 
     TextoBotao.addEventListener('click', function(){
-        TextoBotao.textContent = "Mudado"
+        TextoBotao.textContent = "Botao Mudado"
     })
 
 
